--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = R-spatstat.univar
-url = https://cran.r-project.org/src/contrib/spatstat.univar_3.0-1.tar.gz
+url = https://ftp.osuosl.org/pub/cran/src/contrib/spatstat.univar_3.1-1.tar.gz
 archives = 
 giturl = 
 domain = 
